// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug and troubleshoot Azure Container Apps and Function Apps production issues using log analysis, health checks, and KQL. WHEN: debug production issues, troubleshoot containerized apps, troubleshoot Azure Functions, analyze logs with KQL, fix image pull failures, investigate health probe failures, troubleshoot cold starts, check resource health, find root cause of errors, function not working.",
  "extractedKeywords": [
    "analysis",
    "analyze",
    "apps",
    "azure",
    "cause",
    "check",
    "checks",
    "cli",
    "cold",
    "container",
    "containerized",
    "debug",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "find",
    "function",
    "functions",
    "health",
    "image",
    "investigate",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "probe",
    "production",
    "pull",
    "resource",
    "root",
    "starts",
    "troubleshoot",
    "using",
    "when",
    "with",
    "working",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "analyze",
  "apps",
  "azure",
  "cause",
  "check",
  "checks",
  "cli",
  "cold",
  "container",
  "containerized",
  "debug",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "find",
  "function",
  "functions",
  "health",
  "image",
  "investigate",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "probe",
  "production",
  "pull",
  "resource",
  "root",
  "starts",
  "troubleshoot",
  "using",
  "when",
  "with",
  "working",
]
`;
